--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -1,5 +1,5 @@
 default:
-  SECRET_KEY: ''
+  SECRET_KEY: ""
   DEBUG: true
   ALLOWED_HOSTS: []
 
@@ -9,3 +9,9 @@ heroku:
     - 127.0.0.1
     - localhost
     - schedulebntu.herokuapp.com
+
+development:
+  DEBUG: true
+    ALLOWED_HOSTS:
+      - 127.0.0.1
+      - localhost
