--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,8 @@ black = "==19.10b0"
 [packages]
 django = "*"
 dynaconf = {extras = ["yaml"],version = "*"}
+dj-database-url = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.7"
