--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -2,6 +2,7 @@ default:
   SECRET_KEY: ""
   DEBUG: true
   ALLOWED_HOSTS: []
+  DATABASE_URL: "postgresql://admin:admin@localhost:5432/schedule"
 
 heroku:
   DEBUG: false
