добавлены базы данных, шаблоны, страницы, сделаны миграции(1)

--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -6,7 +6,4 @@ default:
 
 heroku:
   DEBUG: false
-  ALLOWED_HOSTS:
-    - 127.0.0.1
-    - localhost
-    - schedulebntu.herokuapp.com
+  ALLOWED_HOSTS: ['127.0.0.1', 'localhost', 'schedulebntu.herokuapp.com']
