--- a/config/settings.yaml
+++ b/config/settings.yaml
@@ -5,5 +5,5 @@ default:
   DATABASE_URL: "postgresql://admin:admin@localhost:5432/schedulebntu"
 
 heroku:
-  DEBUG: false
+  DEBUG: true
   ALLOWED_HOSTS: ['127.0.0.1', 'localhost', 'schedulebntu.herokuapp.com']
